# fastAPI-test

./: .gitignore  main.py  pyproject.toml
