[tool.poetry]
name = "fast-api-test"
version = "0.1.0"
description = "testing out fast api with AWS lambda"
authors = ["Henri Heilala <henri.heilala@nitor.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
